# basic-training

./: .dockerignore  .gitignore  Demo.py  Dockerfile  ListDemo.py  README.md  SetDemo.py  animal.py  animal2.py  bmi.py  exec_example.py  functionArgDemo.py  gitignore  listUse.py  logDemo.py  main_a.py  module_a.py  pyproject.toml  requirement.txt  returnYeild.py  scraper_log  setDemoAI.py  setUse.py  setup.py  testEnv.py  weather.py  新人教育訓練.md
poetry_env/: pyproject.toml  requirements.txt
stage1/: Demo.py  README.md  animal.py  bmi.py  config.env  demo.py  dictDemo.py  dict_demo.py  env_use.py  exec_example.py  functionArgDemo.py  function_arg_demo.py  iter.py  list_demo.py  logDemo.py  log_demo.py  muti_thread.py  testEnv.py  tuple_demo.py  新人教育訓練.md
stage1/zerojudge/: q366.py
stage3/: README.md  專案開發訓練.md  開發前規劃.md
stage3/api/: database.py  main.py  models.py
stage3/api/static/: style.css
stage3/api/templates/: article_pages.html  single_article.html  statistics.html
stage3/api/test/: test_api.py
stage3/scrapper/: base_scraper.py  browser_manager.py  celery_test.py  config.env  database_handler.py  main.py  parser_handler.py  scraper.py  scraper_log  scraper_log_setup.py  test.py
stage3/scrapper/tests/: test_base_scraper.py
zerojudge/: Ordering System.py  Simply Subsets.py  setProblem.py
