[tool.poetry]
name = "fortraining"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.1"
dotenv = "^0.9.9"
selenium = "^4.35.0"
beautifulsoup4 = "^4.13.5"
pymysql = "^1.1.2"
requests = "^2.32.5"
celery = "^5.5.3"
redis = "^6.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
